@@ -397,3 +397,48 @@ int32_t SPVM__Net__SSLeay__OCSP__resp_find(SPVM_ENV* env, SPVM_VALUE* stack) {
   return 0;
 }
 
+int32_t SPVM__Net__SSLeay__OCSP__resp_get0(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_bs = stack[0].oval;
+  
+  int32_t idx = stack[1].ival;
+  
+  if (!obj_bs) {
+    return env->die(env, stack, "The OCSP_BASICRESP object $bs must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  OCSP_BASICRESP* bs = env->get_pointer(env, stack, obj_bs);
+  
+  OCSP_SINGLERESP* singleresp = OCSP_resp_get0(bs, idx);
+  
+  if (!singleresp) {
+    int64_t ssl_error = ERR_peek_last_error();
+    
+    char* ssl_error_string = env->get_stack_tmp_buffer(env, stack);
+    ERR_error_string_n(ssl_error, ssl_error_string, SPVM_NATIVE_C_STACK_TMP_BUFFER_SIZE);
+    
+    env->die(env, stack, "[OpenSSL Error]OCSP_resp_get0 failed:%s.", ssl_error_string, __func__, FILE_NAME, __LINE__);
+    
+    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    
+    return error_id;
+  }
+  
+  void* obj_address_singleresp = env->new_pointer_object_by_name(env, stack, "Address", singleresp, &error_id, __func__, FILE_NAME, __LINE__);
+  if (error_id) { return error_id; }
+  stack[0].oval = obj_address_singleresp;
+  env->call_class_method_by_name(env, stack, "Net::SSLeay::OCSP_SINGLERESP", "new_with_pointer", 1, &error_id, __func__, FILE_NAME, __LINE__);
+  if (error_id) { return error_id; }
+  void* obj_singleresp = stack[0].oval;
+  
+  env->set_no_free(env, stack, obj_singleresp, 1);
+  
+  env->set_field_object_by_name(env, stack, obj_address_singleresp, "ref_ocsp_basicresp", obj_bs, &error_id, __func__, FILE_NAME, __LINE__);
+  if (error_id) { return error_id; }
+  
+  stack[0].oval = obj_singleresp;
+  
+  return 0;
+}
