@@ -30,4 +30,7 @@ class Net::SSLeay::OCSP {
   
   native static method resp_find : int ($bs : Net::SSLeay::OCSP_BASICRESP, $id : Net::SSLeay::OCSP_CERTID, $last : int);
   
+  native static method resp_get0 : Net::SSLeay::OCSP_SINGLERESP ($bs : Net::SSLeay::OCSP_BASICRESP, $idx : int);
+  
+  
 }
